@@ -1,4 +1,5 @@
 Changes towards version 0.7:
+- Remove the unnecessary VControl memory abstraction layer - Michael
 - Fix compilation without Netplay support - SvdB
 - Added limited AIFF sound file decoder for playing 3DO originals;
   SDX2 decoder by SvdB - Alex
